[package]
name = "rustcrypt"
version = "0.2.0-beta.1"
edition = "2021"
authors = ["Arthur Bernard"]
description = "Runtime-safe AES-GCM encryption for protecting secrets in Rust applications"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/rustcrypt"
keywords = [
    "crypto",
    "encryption",
    "aes-gcm",
    "obfuscator",
    "security",
]
categories = [
    "cryptography",
    "security",
]

[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
rand = "0.8"
rand_core = "0.6"
getrandom = "0.2"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
secrecy = "0.8"
rustcrypt-ct-macros = { version = "0.1.0", path = "rustcrypt-ct-macros" }
pbkdf2 = "0.12"

[lib]
name = "rustcrypt"
path = "src/lib.rs"

[features]
default = ["hardware-keys", "ephemeral-sessions"]
ephemeral-sessions = []
hardware-keys = []