[workspace]
members = [
    "rustcrypt-core",
    "rustcrypt-macros", 
    "rustcrypt-derive",
    "rustcrypt-ct-macros"
]
resolver = "2"

[workspace.package]
version = "0.3.0-beta.1"
edition = "2021"
authors = ["Arthur Bernard"]
description = "Macro-first encryption and obfuscation library for Rust"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/rustcrypt"
keywords = [
    "crypto",
    "encryption", 
    "obfuscator",
    "macros",
    "security",
]
categories = [
    "cryptography",
    "security",
]

[package]
name = "rustcrypt"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Macro-first encryption and obfuscation library for Rust"
license.workspace = true
readme.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rustcrypt-core = { version = "0.3.0-beta.1" }
rustcrypt-macros = { version = "0.3.0-beta.1" }
rustcrypt-derive = { version = "0.3.0-beta.1" }
rustcrypt-ct-macros = { version = "0.1.0" }

[features]
default = ["hardware-keys", "ephemeral-sessions"]
ephemeral-sessions = []
hardware-keys = []