[package]
name = "rustcrypt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core encryption and obfuscation functionality for rustcrypt"
license.workspace = true

[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
rand = "0.8"
rand_core = "0.6"
getrandom = "0.2"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
secrecy = "0.8"
pbkdf2 = "0.12"

[features]
default = ["hardware-keys", "ephemeral-sessions"]
ephemeral-sessions = []
hardware-keys = []
