[package]
name = "rustcrypt-ct-macros"
version = "0.1.0"
edition = "2021"
description = "Compile-time obfuscation macros for rustcrypt"
license = "MIT"
repository = "https://github.com/ArthurBernard1/rustcrypt"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }