[package]
name = "rustcrypt-derive"
version = "0.3.0-beta.1"
edition = "2021"
description = "Derive macros for rustcrypt automatic struct encryption"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
rustcrypt-core = { version = "0.3.0-beta.1" }