[package]
name = "rustcrypt-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Function-like macros for rustcrypt runtime obfuscation"
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
rustcrypt-core = { version = "0.3.0-beta.1" }